--- a/4komaapi/package.json
+++ b/4komaapi/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "date-utils": "^1.2.21",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
